use bundles to fetch bootstrap config
